--- a/app/src/main/res/layout/activity_lupa_password.xml
+++ b/app/src/main/res/layout/activity_lupa_password.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LupaPasswordActivity">
+    tools:context=".LupaPasswordActivity"
+    android:padding="16dp">
 
     <EditText
         android:id="@+id/edPhoneNumber"
@@ -18,6 +19,8 @@
         android:id="@+id/btnLupas"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@android:color/holo_orange_dark"
+        android:textColor="@android:color/white"
         app:layout_constraintTop_toBottomOf="@id/edPhoneNumber"
         android:text="LUPA PASSWORD"/>
 
