--- a/app/src/main/res/layout/activity_update_and_delete.xml
+++ b/app/src/main/res/layout/activity_update_and_delete.xml
@@ -5,45 +5,76 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RegisterActivity">
+    tools:context=".RegisterActivity"
+    android:background="@drawable/bg_login"
+    android:padding="16dp">
 
-    <EditText
-        android:id="@+id/edUsername"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/txtInputUsername"
         app:layout_constraintTop_toTopOf="parent"
-        android:hint="@string/username"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <EditText
-        android:id="@+id/edPhoneNumber"
-        app:layout_constraintTop_toBottomOf="@id/edUsername"
+        <EditText
+            android:id="@+id/edUsername"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/username"/>
+    </com.google.android.material.textfield.TextInputLayout>
+
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/txtInputPhoneNumber"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/phone_number"/>
+        app:layout_constraintTop_toBottomOf="@id/txtInputUsername">
 
-    <EditText
-        android:id="@+id/edPassword"
+        <EditText
+            android:id="@+id/edPhoneNumber"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/phone_number"/>
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/txtInputPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/edPhoneNumber"
-        android:inputType="textPassword"
-        android:hint="@string/password"/>
+        app:layout_constraintTop_toBottomOf="@id/txtInputPhoneNumber">
+
+        <EditText
+            android:id="@+id/edPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            android:hint="@string/password"/>
+    </com.google.android.material.textfield.TextInputLayout>
 
     <Button
         android:id="@+id/btnUpdate"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/update_data"
-        app:layout_constraintTop_toBottomOf="@id/edPassword"
-        />
+        android:layout_margin="16dp"
+        app:layout_constraintEnd_toStartOf="@id/btnDelete"
+        app:layout_constraintTop_toBottomOf="@id/txtInputPassword"
+        app:layout_constraintStart_toStartOf="parent"
+        android:background="@android:color/holo_orange_dark"
+        android:textColor="@android:color/white" />
 
     <Button
         android:id="@+id/btnDelete"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/delete_data"
-        app:layout_constraintTop_toBottomOf="@id/btnUpdate"
-        />
+        android:layout_margin="16dp"
+        app:layout_constraintTop_toBottomOf="@id/txtInputPassword"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/btnUpdate"
+        android:background="@android:color/holo_orange_dark"
+        android:textColor="@android:color/white" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
