--- a/app/src/main/res/layout/item_recycler.xml
+++ b/app/src/main/res/layout/item_recycler.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="16dp">
+    android:padding="16dp">
 
     <TextView
         android:id="@+id/txtUsername"
@@ -22,6 +22,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:text="082112312312"
         />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
